src/objects/loan__Savings_Account_Interest__c.object
<CustomObject>
    <fields>
        <fullName>loan__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Interest_To_Be_Posted__c</fullName>
        <label>Interest To Be Posted</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Is_Valid__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Posted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Savings_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Savings Account</label>
        <referenceTo>loan__Savings_Account__c</referenceTo>
        <relationshipLabel>Savings Account Interests</relationshipLabel>
        <relationshipName>Savings_Accounts_Interests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Savings Account Interest</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Savings Accounts Interests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>